# modern-datalake-pipeline

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: Airflow_dag_test.py  Bank_Data_Dag.py
